# src/api/model.ts
@@ -63,6 +63,9 @@ export type DnsCacheQuery = operations['listDnsCache']['parameters']['query'];
 export type DnsLogList = Schema['DnsLogList'];
 export type DnsLogRecord = Schema['DnsLogRecord'];
 export type DnsLogQuery = operations['listDnsLog']['parameters']['query'];
+export type RuntimeSettings = Schema['RuntimeSettings'];
+export type RuntimeSettingsPatch = Schema['RuntimeSettingsPatch'];
+export type RuntimeSettingField = Schema['RuntimeSettingField'];
 export type EventKind = Schema['EventKind'];
 type EventData = {
   'stream.ready': Schema['StreamReadyEvent'];
